Converted to partner trading method

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -290,7 +290,23 @@ $(document).ready(function () {
                   
                 </div>
 
+                <br>
+                <p style='color: lightgray;'>Requests</p>
+                <hr style='border-color: grey;'>
+                <div class='js-current-requests'>
+                  
+                </div>
+
+                <br>
+                <p style='color: lightgray;'>Partners</p>
+                <hr style='border-color: grey;'>
+                <div class='js-current-partners'>
+                  
+                </div>
+
                 <hr>
+
+
                 <div class='delete-account'>
 
                 </div>
