--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -117,7 +117,7 @@ $(document).ready(function () {
 				<br><br>
 					<h2 style='font-size: 30px;'><%= user.username %></h2>
           <br>
-					<h3 style=''>Boynton Beach, Florida</h3>
+          <hr style="width: 80%; border-style: solid; border-color: darkgray;">
 				
 				</div>
 				
